--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue2-element-ui",
+  "name": "切片上传",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,6 +12,7 @@
     "axios": "^1.3.4",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.13",
+    "spark-md5": "^3.0.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
